--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@ body {
   justify-content: center;
 }
 
+#col {
+  float: left;
+}
+
 .cell {
   width: 50px;
   height: 50px;
@@ -20,6 +24,10 @@ body {
   text-align: center;
   vertical-align: middle;
   line-height: 50px;
+}
+
+.cornerText {
+  font-size: 15px;
 }
 
 #col:nth-child(3n + 4) {
