--- a/src/App.css
+++ b/src/App.css
@@ -18,16 +18,21 @@ body {
   width: 50px;
   height: 50px;
   border: 0.5px solid black;
+  padding: 2px;
 }
 
 .centerText {
   text-align: center;
-  vertical-align: middle;
   line-height: 50px;
+  
 }
 
 .cornerText {
-  font-size: 15px;
+  font-size: 40%;
+  text-align: left;
+  align-items: center;
+  letter-spacing: 4.5px;
+  line-height: 1.48;
 }
 
 #col:nth-child(3n + 4) {
