--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
-  font: 30px "Fira Sans", sans-serif;
-  cursor: pointer;
-  user-select: none;
+  text-align: center;
+}
+
+*:focus {
+  outline: none;
 }
 
 .App {
@@ -10,47 +12,40 @@ body {
   justify-content: center;
 }
 
-#col {
-  float: left;
+table {
+  cursor: pointer;
+  user-select: none;
+  border-collapse: collapse;
 }
 
-.cell {
+td {
   width: 50px;
   height: 50px;
   border: 0.5px solid black;
-  padding: 2px;
 }
 
-.centerText {
-  text-align: center;
-  line-height: 50px;
-  
+/* Borders */
+
+tr:nth-child(3n + 1) {
+  border-top: 3px solid black;
 }
 
-.cornerText {
-  font-size: 40%;
-  text-align: left;
-  align-items: center;
-  letter-spacing: 4.5px;
-  line-height: 1.48;
+tr:last-child {
+  border-bottom: 3px solid black;
 }
 
-#col:nth-child(3n + 4) {
-  border-left: 5.5px solid black;
+td:nth-child(3n) {
+  border-right: 3px solid black;
 }
 
-.cell:nth-child(3n + 4) {
-  border-top: 5.5px solid black;
+td:first-child {
+  border-left: 3px solid black;
 }
 
-#focused {
+.selected {
   background-color: #aaa;
 }
 
-#focused:focus {
-  outline: none;
-}
-
-#adjacent {
+.adjacent {
   background-color: #ddd;
 }
