--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ td {
   width: 50px;
   height: 50px;
   border: 0.5px solid black;
+  position: relative;
 }
 
 /* Borders */
@@ -53,4 +54,26 @@ td:first-child {
 
 .locked {
   color: blue;
+}
+
+td > .overlayText {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 15px;
+  word-spacing: 2px;
+  text-align: center;
+}
+
+.corner {
+  text-align: left;
+  width: 100%;
+  height: 100%;
+}
+
+.center {
+  line-height: 50px;
 }
