--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   outline: none;
 }
 
-.App {
+.board {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,20 +80,44 @@ td > .overlayText {
   line-height: 50px;
 }
 
-.sidebar {
-  width: 150px;
+.wrapper {
+  display: inline-block;
+}
+
+.mainArea {
+  display: flex;
+  flex-direction: column;
 }
 
 .remaining {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
   font-size: 20px;
   line-height: normal;
   background: #aaa;
-  border-radius: 10px;
-  padding: 0 10px;
-  margin-inline: 10px;
+  border-radius: 5px;
+  margin: 5px;
+  outline: 2px solid black;
 }
 
 .remaining div {
-  border-radius: 10%;
-  margin: 1px;
+  margin: 3px;
+  width: fit-content;
+}
+
+.header {
+  align-self: center;
+  width: 100%;
+  background-color: #aaa;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.sidebarWrapper {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
