Add ability to click on remaining numbers

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,8 @@ td > .overlayText {
 
 .remaining div {
   margin: 3px;
-  width: fit-content;
+  width: 2rem;
+  cursor: pointer;
 }
 
 .header {
