--- a/src/App.css
+++ b/src/App.css
@@ -62,20 +62,6 @@ body {
   cursor: pointer;
 }
 
-.buttons button {
-  background-color: #aaa;
-  padding: 5px 10px;
-  color: black;
-  border: 2px solid black;
-  float: center;
-  margin-left: 6px;
-  margin-right: 6px;
-}
-
-.buttons button:hover {
-  background-color: #c5c5c5;
-}
-
 .mainArea {
   display: flex;
   justify-content: center;
@@ -110,6 +96,7 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid black;
+  font-size: 2.5rem;
 }
 
 .row:nth-child(3n + 1) > div {
@@ -134,7 +121,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  font-size: 60%;
+  font-size: 1.1rem;
   text-align: center;
 }
 
@@ -149,4 +136,29 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.buttons .row {
+  margin: 15px auto;
+  display: flex;
+  justify-content: center;
+}
+
+.buttons button {
+  background-color: #aaa;
+  padding: 5px 10px;
+  color: black;
+  border: 2px solid black;
+  border-radius: 5px;
+  float: center;
+  margin-inline: 3px;
+}
+
+.buttons button:hover {
+  background-color: #c5c5c5;
+}
+
+.buttons .row:last-child button:disabled {
+  background-color: #555;
+  color: #eee;
 }
