Add darker color for selected cells vs same number
Next up on the roadmap is adding support for dragging :)

--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,16 @@ body {
   width: 100%;
 }
 
-.selected {
+.adjacent {
+  background-color: #ddd;
+}
+
+.sameNumber {
   background-color: #aaa;
 }
 
-.adjacent {
-  background-color: #ddd;
+.selected {
+  background-color: #777;
 }
 
 .locked {
