--- a/styles/OverlayText.module.css
+++ b/styles/OverlayText.module.css
@@ -23,3 +23,14 @@
 .center:not(:only-of-type) {
   margin-left: -100%;
 }
+
+@media (max-width: 768px) {
+  .overlayText {
+    font-size: 2vmin;
+  }
+
+  .corner {
+    word-spacing: 2vmin;
+    line-height: 3.5vmin;
+  }
+}
